# esp32s3-camare

./: AI_CONTROL_UPGRADE.md  AI_ENHANCED_FEATURES.md  AI_IMPLEMENTATION.md  AI_USAGE_GUIDE.md  API_DOCUMENTATION.md  ARCHITECTURE_DIAGRAMS.md  BUILD_SUCCESS.md  BUILD_SUCCESS_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_ANALYSIS_SUMMARY.md  COMPILE_FIX_REPORT.md  DEPLOYMENT_GUIDE.md  FINAL_BUILD_SUCCESS.md  FINAL_COMPILE_FIX.md  INSTALL_GUIDE_CN.md  L298N_电机控制说明.md  LICENSE  PROJECT_DETAILED_DOCUMENTATION.md  PROJECT_STATUS.md  README.md  TASK5_6_IMPLEMENTATION.md  TLS_FIX_SUMMARY.md  UI_COLOR_OPTIMIZATION.md  WEB_UI_OPTIMIZATION.md  partitions.csv  sdkconfig  sdkconfig.old
components/ai_service/: CMakeLists.txt  ai_service.c  ai_service.h  ai_service_text_parser.c  local_ai_service.c  local_ai_service.h
components/camera_driver/: CMakeLists.txt  camera_driver.c
components/espressif__esp32-camera/: idf_component.yml
components/motor_driver/: CMakeLists.txt  motor_driver.c
components/navigation_service/: CMakeLists.txt  navigation_service.c  navigation_service.h
components/storage_manager/: CMakeLists.txt  storage_manager.c  storage_manager.h
components/time_service/: CMakeLists.txt  time_service.c  time_service.h
components/web_server/: CMakeLists.txt  web_server.c  web_server.h
components/wifi_manager/: CMakeLists.txt  (+2 more)
esp32-micropython-firmware/: ENHANCED_CAMERA_SUMMARY.md  ENHANCED_FIRMWARE_COMPLETION.md  PROJECT_SUMMARY.md  README.md  camera_gpio_control.py  config.ini
main/: CMakeLists.txt  esp32s3_camera_web.c  idf_component.yml
(+37 files in other folders)
